# openGL_template

./: .gitignore  CMakeLists.txt  README.md
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
src/: main.cpp
